objects/PRX_BCI_Integration_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>PRX BCI Integration Settings</description>
    <fields>
        <fullName>PRX_B2B_Gateway_Endpoint__c</fullName>
        <description>PRX B2B Gateway Endpoint</description>
        <inlineHelpText>PRX B2B Gateway Endpoint</inlineHelpText>
        <label>PRX B2B Gateway Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_B2B_Mutual_Auth_Cert__c</fullName>
        <description>PRX B2B Mutual Auth Cert</description>
        <inlineHelpText>PRX B2B Mutual Auth Cert</inlineHelpText>
        <label>PRX B2B Mutual Auth Cert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_Message_Sign_Cert__c</fullName>
        <label>PRX Message Sign Cert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PRX BCI Integration Settings</label>
</CustomObject>